@@ -1,4 +1,4 @@
-;;;; soap-client.el -- Access SOAP web services       -*- lexical-binding: t -*-
+;;; soap-client.el --- Access SOAP web services       -*- lexical-binding: t -*-
 
 ;; Copyright (C) 2009-2015 Free Software Foundation, Inc.
 
